# hbrs-ros-pkg

./: README.md  repository.debs  repository.rosinstall
hbrs_audio/: stack.xml
hbrs_audio/hbrs_soundfile_player/: CMakeLists.txt  mainpage.dox  manifest.xml
hbrs_common/: stack.xml
hbrs_common/hbrs_algorithms/: CMakeLists.txt  manifest.xml
hbrs_common/hbrs_algorithms/controller/: pd_controller.cpp  pi_controller.cpp
hbrs_common/hbrs_algorithms/data_fitting/: circle_2d.cpp  circle_2d.h
hbrs_common/hbrs_algorithms/geometry/: conversions.cpp  geometric_distances.cpp  geometric_properties.cpp
hbrs_common/hbrs_algorithms/io/: file_access.cpp
hbrs_common/hbrs_algorithms/machine_learning/: adaboost.cpp  random_trees.cpp  svm.cpp  svm.h
hbrs_common/hbrs_algorithms/neural_networks/: self_organizing_map.cpp  self_organizing_map.hpp
hbrs_common/hbrs_algorithms/projections/: pointcloud_projections.cpp
hbrs_common/hbrs_algorithms/segmentation/: laserscan_segmentation.cpp  laserscan_segmentation.h  pointcloud_segmentation.cpp  pointcloud_segmentation.hpp
hbrs_common/hbrs_algorithms/statistics/: means.cpp  minmax.cpp
hbrs_common/hbrs_algorithms/wrapper/: pcl_wrapper.cpp  pcl_wrapper.hpp
hbrs_common/hbrs_msgs/: manifest.xml
hbrs_common/hbrs_msgs/msg/: BoundingBoxList.msg  Object.msg  ObjectList.msg  PlanarPolygon.msg
hbrs_common/hbrs_srvs/: manifest.xml
hbrs_common/hbrs_srvs/srv/: AccumulateTabletopCloud.srv  ClusterTabletopCloud.srv  FindWorkspace.srv  GetObjects.srv  MakeBoundingBoxes.srv  PassString.srv  ReturnBool.srv
hbrs_environments/: stack.xml
hbrs_environments/hbrs_default_env_config/: mainpage.dox  manifest.xml  upload_param.launch
hbrs_environments/hbrs_default_env_config/brsu-c025-arena/: map.pgm  map.yaml  navigation_goals.yaml  navigation_orientations.yaml  simulation_object_locations.yaml
hbrs_environments/hbrs_default_env_config/brsu-c025-empty-corner/: map.pgm  map.yaml  navigation_goals.yaml  navigation_orientations.yaml  upload_param_brsu-c025-empty-corner.launch
hbrs_environments/hbrs_default_env_config/brsu-c069/: brsu_speech_names.yaml  brsu_speech_objects.yaml  command_gui_buttons.yaml  nav_buttons_brsu_home.yaml  upload_param_brsu-c069.launch
hbrs_environments/hbrs_default_env_config/brsu-home/: brsu_corridor_places.yaml  brsu_speech_names.yaml  brsu_speech_object_classes.yaml  brsu_speech_places.yaml  brsu_teached_team_member_faces.yaml  entrance.yaml  grasp_param.yaml  map.pgm  navigation_goals_enhanced_whoiswho.yaml  navigation_goals_general_purpose_1.yaml  navigation_goals_getit.yaml  navigation_goals_rips.yaml  navigation_goals_whoiswho.yaml  shopping_mall_map.pgm  upload_param_brsu-home.launch
hbrs_environments/hbrs_default_env_config/brsu-iros2012/: map.pgm  navigation_goals.yaml  navigation_orientations.yaml
hbrs_environments/hbrs_default_env_config/brsu-iros2012-finals/: map.pgm  navigation_goals.yaml
hbrs_environments/hbrs_gazebo_objects/: mainpage.dox  manifest.xml
hbrs_environments/hbrs_gazebo_worlds/: mainpage.dox  manifest.xml
hbrs_manipulation/: stack.xml
hbrs_manipulation/hbrs_arm_cart_control/: CMakeLists.txt  mainpage.dox  manifest.xml
hbrs_navigation/: README  stack.xml
hbrs_navigation/hbrs_safe_cmd_vel/: CMakeLists.txt  README  mainpage.dox  manifest.xml
hbrs_perception/: .gitignore  stack.xml
hbrs_perception/hbrs_door_status/: .gitignore  CMakeLists.txt  README  manifest.xml
hbrs_perception/hbrs_nearest_object_detector/: CMakeLists.txt  mainpage.dox  manifest.xml
hbrs_perception/hbrs_object_finder/: .gitignore  CMakeLists.txt  manifest.xml
hbrs_perception/hbrs_object_finder/ros/include/: object_candidate_extraction.h  object_segmentation.h  plane_extraction.h  roi_extraction.h  struct_planar_surface.h  toolbox_ros.h
hbrs_perception/hbrs_object_finder/ros/launch/: object_segmentation.launch
hbrs_perception/hbrs_object_finder/ros/nodes/: object_segmentation_node.cpp
hbrs_perception/hbrs_object_finder/ros/src/: object_candidate_extraction.cpp  object_segmentation.cpp  plane_extraction.cpp  roi_extraction.cpp  toolbox_ros.cpp
hbrs_perception/hbrs_perception_tests/: .gitignore  CMakeLists.txt  manifest.xml
hbrs_perception/hbrs_perception_tests/cfg/: PlaneExtraction.cfg
hbrs_perception/hbrs_perception_tests/ros/include/impl/: offline_test_base.hpp  online_test_base.hpp  reconfigurable_plane_extraction.hpp  test_base.hpp
hbrs_perception/hbrs_perception_tests/ros/src/: offline_plane_extraction_test.cpp  online_plane_extraction_test.cpp  plane_extraction_test.cpp
hbrs_perception/hbrs_scene_segmentation/: CMakeLists.txt  manifest.xml
hbrs_perception/hbrs_scene_segmentation/common/include/: aliases.h  bounding_box.h  cloud_accumulation.h  octree_pointcloud_occupancy_colored.h  plane_extraction.h
hbrs_perception/hbrs_scene_segmentation/common/src/: bounding_box.cpp  cloud_accumulation.cpp  plane_extraction.cpp  polyclipping.cpp
hbrs_perception/hbrs_scene_segmentation/ros/config/: workspace_constraints.yaml
hbrs_perception/hbrs_scene_segmentation/ros/include/impl/: helpers.hpp
hbrs_perception/hbrs_scene_segmentation/ros/launch/: scene_segmentation.launch
hbrs_perception/hbrs_scene_segmentation/ros/nodes/: bounding_box_maker_node.cpp  calibrate_workspace_finder.py  tabletop_cloud_accumulator_node.cpp  tabletop_cloud_clusterer_node.cpp  workspace_finder_node.cpp
hbrs_perception/hbrs_visualization/: CMakeLists.txt  manifest.xml
hbrs_tools/: stack.xml
hbrs_tools/hbrs_example_ros_package/: CMakeLists.txt  mainpage.dox  manifest.xml
hbrs_tools/hbrs_example_ros_package/common/include/: my_functional_class.h
hbrs_tools/hbrs_example_ros_package/common/src/: my_functional_class.cpp
hbrs_tools/hbrs_example_ros_package/ros/launch/: ros_launch_example.launch
hbrs_tools/hbrs_example_ros_package/ros/nodes/: ros_node_example.cpp
hbrs_tools/hbrs_example_ros_package/ros/scripts/: check-dependencies.py  roscreate-pkg.py
other/jenkins/: hbrs_jenkins.sh
other/tools/: nfs_mount_check.sh  ntpsync.py  shutdown_pc.sh  user.bashrc
(+132 files in other folders)
